--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Contact</title>
 </head>
+
 <body>
     <header>
         <section id="navbar">
@@ -70,6 +72,159 @@
         </section>
     </header>
     <main>
+        <section id="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24313.215380891517!2d49.86191205!3d40.3833254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2saz!4v1678084299482!5m2!1sen!2saz"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+        <section id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="name">
+                            <h4>Bookstore Central</h4>
+                        </div>
+                        <div class="location">
+                            <div class="icon">
+                                <i class="fa-solid fa-location-dot"></i>
+                            </div>
+                            <div class="address">
+                                <p>194 Amsterdam Ave NY</p>
+                            </div>
+                        </div>
+                        <div class="phone">
+                            <div class="icon">
+                                <i class="fa-solid fa-mobile"></i>
+                            </div>
+                            <div class="number">
+                                <p>(+123) 456 789</p>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <div class="icon">
+                                <i class="fa-solid fa-envelope"></i>
+                            </div>
+                            <div class="mail">
+                                <p>chapter@example.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="name">
+                            <h4>Bookstore 1</h4>
+                        </div>
+                        <div class="location">
+                            <div class="icon">
+                                <i class="fa-solid fa-location-dot"></i>
+                            </div>
+                            <div class="address">
+                                <p>194 Amsterdam Ave NY</p>
+                            </div>
+                        </div>
+                        <div class="phone">
+                            <div class="icon">
+                                <i class="fa-solid fa-mobile"></i>
+                            </div>
+                            <div class="number">
+                                <p>(+123) 456 789</p>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <div class="icon">
+                                <i class="fa-solid fa-envelope"></i>
+                            </div>
+                            <div class="mail">
+                                <p>chapter@example.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="name">
+                            <h4>Bookstore 2</h4>
+                        </div>
+                        <div class="location">
+                            <div class="icon">
+                                <i class="fa-solid fa-location-dot"></i>
+                            </div>
+                            <div class="address">
+                                <p>194 Amsterdam Ave NY</p>
+                            </div>
+                        </div>
+                        <div class="phone">
+                            <div class="icon">
+                                <i class="fa-solid fa-mobile"></i>
+                            </div>
+                            <div class="number">
+                                <p>(+123) 456 789</p>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <div class="icon">
+                                <i class="fa-solid fa-envelope"></i>
+                            </div>
+                            <div class="mail">
+                                <p>chapter@example.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="name">
+                            <h4>Publisher</h4>
+                        </div>
+                        <div class="location">
+                            <div class="icon">
+                                <i class="fa-solid fa-location-dot"></i>
+                            </div>
+                            <div class="address">
+                                <p>194 Amsterdam Ave NY</p>
+                            </div>
+                        </div>
+                        <div class="phone">
+                            <div class="icon">
+                                <i class="fa-solid fa-mobile"></i>
+                            </div>
+                            <div class="number">
+                                <p>(+123) 456 789</p>
+                            </div>
+                        </div>
+                        <div class="message">
+                            <div class="icon">
+                                <i class="fa-solid fa-envelope"></i>
+                            </div>
+                            <div class="mail">
+                                <p>chapter@example.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="brand">
+            <div class="container">
+                <div class="row">
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-1.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-2.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-3.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-4.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-5.png" alt="">
+                    </div>
+                    <div class="col-2">
+                        <img src="./assets/images/home/brand-6.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer>
         <section id="footer">
@@ -95,10 +250,14 @@
                                 <p>follow us on social media and learn about</p>
                                 <p>new promotions.</p>
                                 <div class="icons">
-                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="https://dribbble.com/" target="_blank"><i class="fa-solid fa-basketball"></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i
+                                            class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://dribbble.com/" target="_blank"><i
+                                            class="fa-solid fa-basketball"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -159,4 +318,5 @@
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/contact.js"></script>
 </body>
+
 </html>
