--- a/Home.html
+++ b/Home.html
@@ -75,7 +75,6 @@
         </section>
     </header>
     <main>
-
         <section id="slider">
             <div class="container">
                 <div class="swiper mySwiper">
@@ -134,12 +133,12 @@
                     </div>
                     <div class="col-3 filterDiv fantasy">
                         <div class="products" data-id="1">
-                            <a href=""><img src="./assets/images/home/product-1.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-1.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JOHN STRASS</a>
+                                <a href="ProductDetail.html">JOHN STRASS</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Winter Darkest Tragedy</a>
+                                <a href="ProductDetail.html">Winter Darkest Tragedy</a>
                             </div>
                             <div class="price-button">
                                 <p>$38.00</p>
@@ -149,12 +148,12 @@
                     </div>
                     <div class="col-3 filterDiv fantasy">
                         <div class="products" data-id="2">
-                            <a href=""><img src="./assets/images/home/product-2.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-2.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JESSICA JOHNSON</a>
+                                <a href="ProductDetail.html">JESSICA JOHNSON</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Symphony Of Trilogy</a>
+                                <a href="ProductDetail.html">Symphony Of Trilogy</a>
                             </div>
                             <div class="price-button">
                                 <p>$22.00</p>
@@ -164,12 +163,12 @@
                     </div>
                     <div class="col-3 filterDiv bestsellers">
                         <div class="products" data-id="3">
-                            <a href=""><img src="./assets/images/home/product-3.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JANE DOE</a>
+                                <a href="ProductDetail.html">JANE DOE</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Wellness And Paradise</a>
+                                <a href="ProductDetail.html">Wellness And Paradise</a>
                             </div>
                             <div class="price-button">
                                 <p>$67.00</p>
@@ -179,12 +178,12 @@
                     </div>
                     <div class="col-3 filterDiv history">
                         <div class="products" data-id="4">
-                            <a href=""><img src="./assets/images/home/product-4.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-4.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JAMES HOFFMAN</a>
+                                <a href="ProductDetail.html">JAMES HOFFMAN</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Renaissance History</a>
+                                <a href="ProductDetail.html">Renaissance History</a>
                             </div>
                             <div class="price-button">
                                 <p>$30.00</p>
@@ -194,12 +193,12 @@
                     </div>
                     <div class="col-3 filterDiv bestsellers history">
                         <div class="products" data-id="5">
-                            <a href=""><img src="./assets/images/home/product-5.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">ADAM STRASS</a>
+                                <a href="ProductDetail.html">ADAM STRASS</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Fantasy Storytelling</a>
+                                <a href="ProductDetail.html">Fantasy Storytelling</a>
                             </div>
                             <div class="price-button">
                                 <p>$29.00</p>
@@ -209,12 +208,12 @@
                     </div>
                     <div class="col-3 filterDiv art">
                         <div class="products" data-id="6">
-                            <a href=""><img src="./assets/images/home/product-6.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-6.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JOHN STRASS</a>
+                                <a href="ProductDetail.html">JOHN STRASS</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Easy Fast Cooking</a>
+                                <a href="ProductDetail.html">Easy Fast Cooking</a>
                             </div>
                             <div class="price-button">
                                 <p>$78.00</p>
@@ -224,12 +223,12 @@
                     </div>
                     <div class="col-3 filterDiv art">
                         <div class="products" data-id="7">
-                            <a href=""><img src="./assets/images/home/product-7.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-7.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JAMES HOFFMAN</a>
+                                <a href="ProductDetail.html">JAMES HOFFMAN</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Amster Hamster Trip</a>
+                                <a href="ProductDetail.html">Amster Hamster Trip</a>
                             </div>
                             <div class="price-button">
                                 <p>$69.00</p>
@@ -239,12 +238,12 @@
                     </div>
                     <div class="col-3 filterDiv bestsellers lovestories">
                         <div class="products" data-id="8">
-                            <a href=""><img src="./assets/images/home/product-8.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">JANE DOE</a>
+                                <a href="ProductDetail.html">JANE DOE</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Summertime Love Stories</a>
+                                <a href="ProductDetail.html">Summertime Love Stories</a>
                             </div>
                             <div class="price-button">
                                 <p>$33.00</p>
@@ -254,12 +253,12 @@
                     </div>
                     <div class="col-3 filterDiv lovestories">
                         <div class="products" data-id="9">
-                            <a href=""><img src="./assets/images/home/product-9.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-9.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">Jessica Johnson</a>
+                                <a href="ProductDetail.html">Jessica Johnson</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Learn To Love Yourself</a>
+                                <a href="ProductDetail.html">Learn To Love Yourself</a>
                             </div>
                             <div class="price-button">
                                 <p>$50.00</p>
@@ -269,12 +268,12 @@
                     </div>
                     <div class="col-3 filterDiv lovestories">
                         <div class="products" data-id="10">
-                            <a href=""><img src="./assets/images/home/product-10.jpg" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-10.jpg" alt=""></a>
                             <div class="name">
-                                <a href="">John Strass</a>
+                                <a href="ProductDetail.html">John Strass</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Japan Travel Stories</a>
+                                <a href="ProductDetail.html">Japan Travel Stories</a>
                             </div>
                             <div class="price-button">
                                 <p>$56.00</p>
@@ -284,12 +283,12 @@
                     </div>
                     <div class="col-3 filterDiv fantasy">
                         <div class="products" data-id="11">
-                            <a href=""><img src="./assets/images/home/product-11.webp" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-11.webp" alt=""></a>
                             <div class="name">
-                                <a href="">LEO TOLSTOY</a>
+                                <a href="ProductDetail.html">LEO TOLSTOY</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Anna Karenina</a>
+                                <a href="ProductDetail.html">Anna Karenina</a>
                             </div>
                             <div class="price-button">
                                 <p>$66.00</p>
@@ -299,12 +298,12 @@
                     </div>
                     <div class="col-3 filterDiv lovestories fantasy">
                         <div class="products" data-id="2">
-                            <a href=""><img src="./assets/images/home/product-12.png" alt=""></a>
+                            <a href="ProductDetail.html"><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
-                                <a href="">STEFAN ZWEIG</a>
+                                <a href="ProductDetail.html">STEFAN ZWEIG</a>
                             </div>
                             <div class="category-name">
-                                <a href="">Chees</a>
+                                <a href="ProductDetail.html">Chees</a>
                             </div>
                             <div class="price-button">
                                 <p>$45.00</p>
